--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,12 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Courses</h1>
+<h1>Choose the course</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>Passed Steps</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,14 +15,12 @@
       <tr>
         <td><%= course.name %></td>
         <td><%= course.description %></td>
+        <td>
+          <%= course.enrollment(current_user).step if course.enrollment(current_user) %>
+          / <%= course.lessons.count %>
+        </td>
         <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Course', new_course_path %>
