--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,7 +10,7 @@
   <%= @course.description %>
 </p>
 
-<h2>Lessons</h2>
+<h2>Course Lessons</h2>
 
 <table>
   <thead>
@@ -24,11 +24,8 @@
     <% @course.lessons.each do |lesson| %>
       <tr>
         <td><%= lesson.name %></td>
-        <td><%= link_to 'Go', course_lesson_path(lesson) %></td>
+        <td><%= link_to_go_lesson(lesson) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to 'Edit', edit_course_path(@course) %> |
-<%= link_to 'Back', courses_path %>
